Fix CORS for production frontend at logbook.baserastech.com
- Add the production origin (and the wider *.baserastech.com pattern) to
  the application.yml default so the app is usable out of the box even
  without a CORS_ORIGINS env var.
- Switch SecurityConfig to setAllowedOriginPatterns so wildcard entries
  actually match (setAllowedOrigins rejects patterns and is incompatible
  with allowCredentials + wildcards).
- Trim entries, drop blanks, strip trailing slashes — eliminates the
  most common "Invalid CORS request" misconfigs.
- Allow PATCH and any request header so non-standard FE headers don't
  trigger preflight rejections.